--- a/README.org
+++ b/README.org
@@ -1300,8 +1300,9 @@ See [[./HISTORY.org][HISTORY]].
 :END:
 
 - This package was inspired by [[http://www.mail-archive.com/gnu-emacs-sources@gnu.org/msg01576.html][Ashish Shukla]] and created by [[https://github.com/punchagan][Puneeth Chaganti]].
+- Cari at [[https://sepiarainbow.com/][Sepia Rainbow Designs]] drew the brilliant logo.
 - [[./docs/Org2Bloggers.org][The Hundreds Of Org2Bloggers Out There]].
-- Be sure to add /your/ or /your friends/ or /anybody's/ blog to the list!
+  - Be sure to add /your/ or /your friends/ or /anybody's/ blog to the list!
 - Org2Blog Is Lovingly Maintained By Grant Rettke
 
 * When Things Go Wrong
