--- a/docs/TestPlan.org
+++ b/docs/TestPlan.org
@@ -178,7 +178,7 @@ These are commands that insert markup into your post.
 
 * Versioning and Libraries
 
-- [ ] ~owp-update-artifacts~ Update version number and dependent libraries in
+- [ ] ~org2blog-def-update-artifacts~ Update version number and dependent libraries in
   - [ ] README.org
   - [ ] org2blog.el
   - [ ] org2blog-pkg.el
