--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -1,7 +1,9 @@
 - [ ] Update the version number and call ~org2blog-def-update-artifacts~.
 - [ ] Bring codebase up to expectations in [[CONTRIBUTING.org][Contributing]].
 - [ ] Push package definition and version changes
-- [ ] Build package with [[https://github.com/melpa/melpa#build-scripts][MELPA]] and make sure it installs and loads
+- [ ] Build package with [[https://github.com/melpa/melpa#build-scripts][MELPA]]
+  - [ ] Make sure it installs and loads
+  - [ ] Update org2blog-master.tar in repo
 - [ ] Complete [[TestPlan.org][Test Plan]].
 - [ ] Update [[../HISTORY.org][History]]
 - [ ] Bring to ~master~ and tag the release
