--- a/README.org
+++ b/README.org
@@ -202,29 +202,6 @@ And this
 (add-to-list 'load-path "/Users/gcr/mysrc/htmlize")
 #+END_SRC
 
-Finally if you make changes to the readme then you need to rebuild the table
-of contents. Install the package [[https://github.com/alphapapa/org-make-toc][org-make-toc]]. Then call ~org-make-toc~. You can
-also install it by hand like you did the other packages, like this:
-
-#+BEGIN_SRC sh
-cd ~/src
-git clone https://github.com/magnars/s.el.git
-git clone https://github.com/magnars/dash.el.git
-git clone https://github.com/alphapapa/org-make-toc.git
-#+END_SRC
-
-#+BEGIN_SRC emacs-lisp
-(add-to-list 'load-path "~/src/s")
-(require 's)
-(add-to-list 'load-path "~/src/dash")
-(require 'dash)
-(add-to-list 'load-path "~/src/org-make-toc")
-(require 'org-make-toc)
-#+END_SRC
-
-See the [[Development][Development]] section for details on automatically rebuilding the table
-of contents.
-
 Now you've got everything you need to run Org2Blog against its source code.
 With this set up you can start playing around with things and even making
 changes. When you scratch and itch, create your branch, and submit a pull
@@ -1377,12 +1354,30 @@ Here is where to begin:
 # eval: (require 'org-make-toc)
 # before-save-hook: org-make-toc
       #+END_SRC
-  - [[./docs/ReleaseProcess.org][Release Process]].
-  - [[./docs/CONTRIBUTING.org][Contributing]].
-  - [[./docs/TestPlan.org][Test Plan]].
-- Rules
-  - [[https://alphapapa.github.io/dont-tread-on-emacs/][Don't Tread On Emacs]].
-  - [[./.github/CODE_OF_CONDUCT.org][Code of Conduct]].
+    - If you do decide make changes to the readme then you need to rebuild the
+      table of contents. Install the package [[https://github.com/alphapapa/org-make-toc][org-make-toc]]. Then call
+      ~org-make-toc~. You can also install it by hand like you did the other
+      packages, like this:
+      #+BEGIN_SRC sh
+      cd ~/src
+      git clone https://github.com/magnars/s.el.git
+      git clone https://github.com/magnars/dash.el.git
+      git clone https://github.com/alphapapa/org-make-toc.git
+      #+END_SRC
+      #+BEGIN_SRC emacs-lisp
+      (add-to-list 'load-path "~/src/s")
+      (require 's)
+      (add-to-list 'load-path "~/src/dash")
+      (require 'dash)
+      (add-to-list 'load-path "~/src/org-make-toc")
+      (require 'org-make-toc)
+      #+END_SRC
+    - [[./docs/ReleaseProcess.org][Release Process]].
+    - [[./docs/CONTRIBUTING.org][Contributing]].
+    - [[./docs/TestPlan.org][Test Plan]].
+    - Rules
+      - [[https://alphapapa.github.io/dont-tread-on-emacs/][Don't Tread On Emacs]].
+      - [[./.github/CODE_OF_CONDUCT.org][Code of Conduct]].
 
 * License
 :properties:
