--- a/README.org
+++ b/README.org
@@ -1375,7 +1375,19 @@ git clone https://github.com/alphapapa/org-make-toc.git
 - Contributing
   - Read the [[./docs/CONTRIBUTING.org][contributing]] guidelines.
   - Before your commit make sure that ~byte-compile-file~, ~checkdoc~, and
-    ~package-lint-current-buffer~ don't report any errors.
+    ~package-lint-current-buffer~ don't report any errors. The first two are
+    included with Emacs. You can either install ~package-lint~ using MELPA
+    You can also install it by hand like you did the other
+    packages, like this:
+    #+BEGIN_SRC sh
+cd ~/src
+git clone https://github.com/purcell/package-lint.git
+    #+END_SRC
+    Use this code to load it:
+    #+BEGIN_SRC emacs-lisp
+(add-to-list 'load-path "~/src/package-lint")
+(require 'package-lint)
+    #+END_SRC
 - [[./docs/TestPlan.org][Test Plan]].
 - [[./docs/ReleaseProcess.org][Release Process]].
 - Rules
