--- a/README.org
+++ b/README.org
@@ -77,8 +77,8 @@ keep it up to date with Org mode.
 
 Org2Blog requires Emacs 26.3 and Org mode 9.1.9.
 
-Despite the runtime version warning Org2Blog will /probably/ work fine on
-versions that are close to the required version.
+That is the minimum version required and will probably work fine with most
+newer versions too.
 
 * Installation
 :properties:
