--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -1,4 +1,5 @@
-- [ ] Update the version number and call ~org2blog-def-update-artifacts~.
+- [ ] Update the version number in ~org2blog-def--package~ ~and call
+  ~org2blog-def-update-artifacts~ to updated all of the versioned files.
 - [ ] Bring codebase up to expectations in [[CONTRIBUTING.org][Contributing]].
   - [ ] Byte compile file, checkdoc, package-lint
 - [ ] Push package definition and version changes
