--- a/README.org
+++ b/README.org
@@ -1401,6 +1401,9 @@ O2BUSER="user"
 O2BPASSWORD="password"
         #+END_SRC
       + Load and evaluate [[./tests/org2blog-test-system.el][System Test Program]].
+        + Start Emacs in an empty environment before loading Org2Blog and
+          performing the testing by starting Emacs like this:
+          ~emacs --no-init-file~      
       + Now you've got everything you need to start automatically going
         through the entire blogging process. The test functions will log you
         in, create and display posts, modify them, publish them, and finally
